fix: address PR comments

--- a/overseerr-api.yml
+++ b/overseerr-api.yml
@@ -2087,6 +2087,9 @@ paths:
                     id:
                       type: string
                       example: job-name
+                    name:
+                      type: string
+                      example: A Job Name
                     type:
                       type: string
                       enum: [process, command]
